fix alignment

--- a/dicamu/src/less/variables.less
+++ b/dicamu/src/less/variables.less
@@ -29,15 +29,20 @@
     }
     
     #listenicon {
-        padding: 16px 8px;
+        padding: 22px 8px 8px 8px;
         color: @neutralgrey !important;
         font-size: 21px;
+        float: left;
+        clear: both;
     }
     
     .listeneintrag {
         font-size: @text_menu;
         color: black;
-        padding: 20px 0;
+        padding: 20px 0 0 0;
+        float: left;
+        display: inline;
+        max-width: 85%;
     }
     
     .warning {
